--- a/index.html
+++ b/index.html
@@ -36,22 +36,42 @@
 
 
         <div class="container-fluid">
-            <h1>3 Coulmn layout</h1>
             <div class="row">
-                <div id="logo" class="col-md-4">
-                        <a class="navbar-brand" href="#">PCT Researc group</a>
+                <nav class="navbar navbar-inverse">
+                    <div id="org_logo" class="col-md-4">
+                        <div class="navbar-header">
+                            <a href="#" class="navbar-brand">PCT Researc group</a>
+                        </div>
                     </div>
                     <div id="nav" class="col-md-8">
-                        <div id="nav_links">
-                            <a href="index.html" target="_self"><span class="glyphicon glyphicon-home">Home</span></a> |
-                            <a href="index.html" target="_self">Publications</a> |
-                            <a href="index.html" target="_self">News & Events</a> |
-                            <a href="index.html" target="_self">Faculty Strength </a> |
-                            <a href="index.html" target="_self">About</a>
-                         </div>
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-home"></span>Home</a> &nbsp;&nbsp;
+                            </li>
+
+                            <li>
+                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-book"></span>Publications</a>&nbsp;&nbsp;&nbsp;
+                            </li>
+
+                            <li>
+                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-book"></span>Projects</a>&nbsp;&nbsp;&nbsp;
+                            </li>
+
+                            <li>
+                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-list-alt"></span>News&Events</a>&nbsp;&nbsp;&nbsp;
+                            </li>
+
+                            <li>
+                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-user"></span>Knowledge Power </a>&nbsp;&nbsp;&nbsp;
+                            </li>
+
+                            <li>
+                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-alt"></span>About</a>
+                            </li>
+                        </ul>
                     </div>
-                </div>
             </div>
+            </nav>
         </div>
                 <div id="slides" class="col-md" style="background-color: lightseagreen">
                     Slide show
