--- a/index.html
+++ b/index.html
@@ -33,48 +33,106 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-
         <div class="container-fluid">
             <div class="row">
-                <nav class="navbar navbar-inverse">
-                    <div id="org_logo" class="col-md-4">
-                        <div class="navbar-header">
-                            <a href="#" class="navbar-brand">PCT Researc group</a>
+                <div id="menu" class="col-md">
+                    <nav class="navbar navbar-default navbar-fixed-top">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-nav">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <div id="org_logo" class="col-md-4">
+                            <div class="navbar-header">
+                                <a href="#" class="navbar-brand">PCT Research group</a>
+                            </div>
                         </div>
+                        <div id="nav" class="col-md-8">
+                            <ul class="nav navbar-nav">
+                                <li>
+                                    <a href="index.html" target="_self"><span class="glyphicon glyphicon-home"></span> Home</a> &nbsp;&nbsp;
+                                </li>
+
+                                <li>
+                                    <a href="index.html" target="_self"><span class="glyphicon glyphicon-globe"></span> Research</a> &nbsp;&nbsp;
+                                </li>
+
+                                <li>
+                                    <a href="index.html" target="_self"><span class="glyphicon glyphicon-list-alt"></span> Publications</a>&nbsp;&nbsp;&nbsp;
+                                </li>
+
+                                <li>
+                                    <a href="index.html" target="_self"><span class="glyphicon glyphicon-book"></span> Projects</a>&nbsp;&nbsp;&nbsp;
+                                </li>
+
+                                <li>
+                                    <a href="index.html" target="_self"><span class="glyphicon glyphicon-calendar"></span> News&Events</a>&nbsp;&nbsp;&nbsp;
+                                </li>
+
+                                <li>
+                                    <a href="index.html" target="_self"><span class="glyphicon glyphicon-user"></span> Knowledge Power </a>&nbsp;&nbsp;&nbsp;
+                                </li>
+
+                                <li>
+                                    <a href="index.html" target="_self"><span class="glyphicon glyphicon-alt"></span> About Us</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+                <div id="slideShow" class="col-md">
+                    <div id="myCarousel" class="carousel slide">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1" class="slider"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="/img/slide.jpg" style="width:100%" class="img-responsive">
+                                <div class="container">
+                                    <div class="carousel-caption">
+                                        <h1>Bootstrap 3 Carousel Layout</h1>
+                                        <p></p>
+                                        <p><a class="btn btn-lg btn-primary" href="http://getbootstrap.com">Learn More</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="http://lorempixel.com/2000/600/abstract/1" class="img-responsive">
+                                <div class="container">
+                                    <div class="carousel-caption">
+                                        <h1>Changes to the Grid</h1>
+                                        <p>Bootstrap 3 still features a 12-column grid, but many of the CSS class names have completely changed.</p>
+                                        <p><a class="btn btn-large btn-primary" href="#">Learn more</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img src="http://placehold.it/1500X500" class="img-responsive">
+                                <div class="container">
+                                    <div class="carousel-caption">
+                                        <h1>Percentage-based sizing</h1>
+                                        <p>With "mobile-first" there is now only one percentage-based grid.</p>
+                                        <p><a class="btn btn-large btn-primary" href="#">Browse gallery</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                            <span class="icon-prev"></span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                            <span class="icon-next"></span>
+                        </a>
                     </div>
-                    <div id="nav" class="col-md-8">
-                        <ul class="nav navbar-nav">
-                            <li>
-                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-home"></span>Home</a> &nbsp;&nbsp;
-                            </li>
+                    <!-- /.carousel -->
 
-                            <li>
-                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-book"></span>Publications</a>&nbsp;&nbsp;&nbsp;
-                            </li>
-
-                            <li>
-                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-book"></span>Projects</a>&nbsp;&nbsp;&nbsp;
-                            </li>
-
-                            <li>
-                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-list-alt"></span>News&Events</a>&nbsp;&nbsp;&nbsp;
-                            </li>
-
-                            <li>
-                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-user"></span>Knowledge Power </a>&nbsp;&nbsp;&nbsp;
-                            </li>
-
-                            <li>
-                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-alt"></span>About</a>
-                            </li>
-                        </ul>
-                    </div>
-            </div>
-            </nav>
-        </div>
-                <div id="slides" class="col-md" style="background-color: lightseagreen">
-                    Slide show
                 </div>
                 <div class="col-md-8" style="background-color: lightgreen">
                     Mission
