--- a/css/Profiles_View.html
+++ b/css/Profiles_View.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>projects</title>
+    <title>Profiles</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Research Group</title>
@@ -27,7 +27,9 @@
     <script src="js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
     <![endif]-->
 </head>
+
 <body>
+
 <div class="container">
     <div class="row">
         <div id="menu" class="col-md">
@@ -77,52 +79,60 @@
                 </div>
             </nav>
         </div>
-        </div>
+    </div>
 
-    <div class="row">
-        <div id="research_side_nav" class="col-md-3">
-            <h2>Areas of Research</h2>
-            <ol>
-                <li>Area 1</li>
-                <li>Area 2</li>
-                <li>Area 2</li>
-                <li>Area 2</li>
-                <li>Area 2</li>
-                <li>Area 2</li>
-            </ol>
-        </div>
-        <div id="research_projects" class="col-md-9">
-            <h2>Research and Development Projects</h2>
-            <div id="inner_projects" class="col-md-9">
-                <ul class="nav nav-tabs">
-                        <li role="presentation" class="active"><a href="#all_done" target="_self">All</a></li>
-                        <li role="presentation"><a href="#" target="_self">Done <span class="badge">3</span></a></li>
-                        <li role="presentation"><a href="#" target="_self">In Progress</a></li>
-                </ul>
+    <div id="header_profiles" class="row">
+        <div class="col-md"  style="padding: 40px;">
+            <div class="col-md-4">
+                <select>
+                    <option>
+                        HCI
+                    </option>
+                </select>
             </div>
-        </div>
-        <div id="nav_projects_outer" class="col-md-9">
-            <div id="all_done" class="col-md-8">
-                <div id="project_name">
-                    <h3>Project Name <small>(Supervisor)</small></h3>
-                <h4>HCI</h4>
-                </div>
-                <div style="clear: both;"></div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis in nunc vel cursus.
-                    Proin elementum pellentesque laoreet. Nam vitae orci ullamcorper, luctus justo ac, dapibus ipsum.
-                    Nam laoreet, sem in luctus dapibus, tellus enim luctus ex, nec aliquet enim nulla sit amet lectus.
-                    In hac habitasse platea dictumst. Maecenas lectus massa, semper nec lacinia ac, mollis vel leo.
-                    Nulla vestibulum volutpat sapien quis viverra. Etiam vitae elementum sapien, sed finibus odio.
-                    Sed sed commodo neque.
-                </p>
-                <div style="border:1px black;" class="col-md-7">
-                    <p><strong> Sponsor name </strong></p>
-                </div>
-                <div><span class="label label-success">Done</span></div>
+
+            <div class="col-md-8" style="float: right">
+                <label>Search</label> <input placeholder="Search by name">
             </div>
+
         </div>
     </div>
+
+    <div class="row">
+
+        <div class="col-md-3">
+            Profile 1
+        </div>
+
+        <div class="col-md-3">
+            Profile 2
+        </div>
+
+        <div class="col-md-3">
+            Profile 3
+        </div>
+
+        <div class="col-md-3">
+            Profile 4
+        </div>
+
+        <div class="col-md-3">
+            Profile 5
+        </div>
+
+        <div class="col-md-3">
+            Profile 6
+        </div>
+
+        <div class="col-md-3">
+            Profile 7
+        </div>
+
+        <div class="col-md-3">
+            Profile 8
+        </div>
 </div>
+</div>
+
 </body>
 </html>
