--- a/Profiles_View.html
+++ b/Profiles_View.html
@@ -49,42 +49,160 @@
     </div>
 
     <div class="row">
-        <div class="col-md-3">
-            Profile 1
-            <img src="/img/male.png" alt="Researcher" />
-        </div>
-        <div class="bottom-aligned-text col-sm-6">
-            <h3></h3>
-        </div>
-        </div>
+        <div id="profiles_view" class="col-md">
+            <div class="col-md-3">
+                <div class="flip-container">
+                    <div class="card">
+                        <div class="front">
+                            Name: Abcd
+                            Profile bal bla
+                        </div>
+                        <div class="back">
+                            <!-- back side content -->
+                            <img src="http://i.imgur.com/Md6judB.png" alt="Researcher">
+                            <span class="caption">Researcher Name</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-        <div class="col-md-3">
-            Profile 2
-        </div>
+            <div class="col-md-3">
+                <div class="flip-container">
+                    <div class="card">
+                        <div class="front">
+                            Name: Abcd
+                            Profile bal bla
+                        </div>
+                        <div class="back">
+                            <!-- back side content -->
+                            <img src="http://i.imgur.com/Md6judB.png" alt="Researcher">
+                            <span class="caption">Researcher Name</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-        <div class="col-md-3">
-            Profile 3
-        </div>
-
-        <div class="col-md-3">
-            Profile 4
-        </div>
-
-        <div class="col-md-3">
-            Profile 5
-        </div>
-
-        <div class="col-md-3">
-            Profile 6
-        </div>
-
-        <div class="col-md-3">
-            Profile 7
-        </div>
-
-        <div class="col-md-3">
-            Profile 8
-        </div>
+            <div class="col-md-3">
+                <div class="flip-container">
+                    <div class="card">
+                        <div class="front">
+                            Name: Abcd
+                            Profile bal bla
+                        </div>
+                        <div class="back">
+                            <!-- back side content -->
+                            <img src="http://i.imgur.com/Md6judB.png" alt="Researcher">
+                            <span class="caption">Researcher Name</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="flip-container">
+                    <div class="card">
+                        <div class="front">
+                            Name: Abcd
+                            Profile bal bla
+                        </div>
+                        <div class="back">
+                            <!-- back side content -->
+                            <img src="http://i.imgur.com/Md6judB.png" alt="Researcher">
+                            <span class="caption">Researcher Name</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="flip-container">
+                    <div class="card">
+                        <div class="front">
+                            Name: Abcd
+                            Profile bal bla
+                        </div>
+                        <div class="back">
+                            <!-- back side content -->
+                            <img src="http://i.imgur.com/Md6judB.png" alt="Researcher">
+                            <span class="caption">Researcher Name</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="flip-container">
+                    <div class="card">
+                        <div class="front">
+                            Name: Abcd
+                            Profile bal bla
+                        </div>
+                        <div class="back">
+                            <!-- back side content -->
+                            <img src="http://i.imgur.com/Md6judB.png" alt="Researcher">
+                            <span class="caption">Researcher Name</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="flip-container">
+                    <div class="card">
+                        <div class="front">
+                            Name: Abcd
+                            Profile bal bla
+                        </div>
+                        <div class="back">
+                            <!-- back side content -->
+                            <img src="http://i.imgur.com/Md6judB.png" alt="Researcher">
+                            <span class="caption">Researcher Name</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="flip-container">
+                    <div class="card">
+                        <div class="front">
+                            Name: Abcd
+                            Profile bal bla
+                        </div>
+                        <div class="back">
+                            <!-- back side content -->
+                            <img src="http://i.imgur.com/Md6judB.png" alt="Researcher">
+                            <span class="caption">Researcher Name</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="flip-container">
+                    <div class="card">
+                        <div class="front">
+                            Name: Abcd
+                            Profile bal bla
+                        </div>
+                        <div class="back">
+                            <!-- back side content -->
+                            <img src="http://i.imgur.com/Md6judB.png" alt="Researcher">
+                            <span class="caption">Researcher Name</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="flip-container">
+                    <div class="card">
+                        <div class="front">
+                            Name: Abcd
+                            Profile bal bla
+                        </div>
+                        <div class="back">
+                            <!-- back side content -->
+                            <img src="http://i.imgur.com/Md6judB.png" alt="Researcher">
+                            <span class="caption">Researcher Name</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+</div>
 </div>
 </div>
 
