Front End Habib Changes

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+    <link rel="stylesheet" href="css/bootstrap-3.3.5-dist/css/bootstrap.min.css">
+    <script src="js/bootstrap-3.3.5-dist/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+    <script src="/ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
     <script src="js/plugins.js"></script>
@@ -97,7 +98,9 @@
                 </div>
             </nav>
         </div>
-
+        <!--
+         * Slide Show Carousel
+         -->
         <div id="slideShow" class="col-md">
             <div id="myCarousel" class="carousel slide">
                 <!-- Indicators -->
@@ -158,11 +161,19 @@
                 </a>
             </div>
             <!-- /.carousel -->
-
         </div>
+
+        <!--
+         * Slide Show Carousel END
+         -->
+
         <div class="container">
+
+            <!--
+             * First Div Left PCT GROUP
+             -->
             <div id="Organization-and-Head" class="col-md-7" style="">
-                <h2>Organization and Head</h2>
+                <h2>PCT Research Group</h2>
 
                 <div class="clearfix">
                     <img style="float: left" class="img-circle" hspace="20"
@@ -185,9 +196,47 @@
             <div id="News" class="col-md-4" style="float: right;">
                 <h2>Updates</h2>
                 <ul class="nav nav-tabs">
-                    <li role="presentation" class="active"><a href="News.html" target="_self">News</a></li>
-                    <li role="presentation"><a href="Events.html" target="_self">Events</a></li>
+                    <li role="presentation" class="active" style=""><a href="News.html" target="_self"><strong>News</strong></a></li>
                 </ul>
+                <div id="text" style="
+    height: 200px;
+    overflow: scroll;
+    overflow-x: hidden;">
+                    <p>
+                        Minions ipsum chasy butt jeje jiji chasy. Belloo! potatoooo butt para tú me want bananaaa!
+                        Chasy ti aamoo! Baboiii. Butt wiiiii para tú baboiii gelatooo. Chasy bananaaaa butt po kass wiiiii.
+                        Tulaliloo la bodaaa gelatooo tatata bala tu la bodaaa jiji para tú bappleees belloo!
+                        Hahaha poulet tikka masala. Jeje poopayee hahaha baboiii ti aamoo! Hahaha me want bananaaa!
+                        Me want bananaaa!
+                        Minions ipsum chasy butt jeje jiji chasy. Belloo! potatoooo butt para tú me want bananaaa!
+                        Chasy ti aamoo! Baboiii. Butt wiiiii para tú baboiii gelatooo. Chasy bananaaaa butt po kass wiiiii.
+                        Tulaliloo la bodaaa gelatooo tatata bala tu la bodaaa jiji para tú bappleees belloo!
+                        Hahaha poulet tikka masala. Jeje poopayee hahaha baboiii ti aamoo! Hahaha me want bananaaa!
+                        Me want bananaaa!
+                    </p>
+                </div>
+            </div>
+
+            <!--
+             * First Div Left PCT GROUP END
+             -->
+
+            <br>
+
+            <!--
+             * First Div Right Events
+             -->
+            <div id="Events" class="col-md-4" style="float: right;">
+                <ul class="nav nav-tabs">
+                    <li role="presentation" class="active"><a href="News.html" target="_self">Events</a></li>
+                </ul>
+                <br>
+
+                Minions ipsum chasy butt jeje jiji chasy. Belloo! potatoooo butt para tú me want bananaaa!
+                Chasy ti aamoo! Baboiii. Butt wiiiii para tú baboiii gelatooo. Chasy bananaaaa butt po kass wiiiii.
+                Tulaliloo la bodaaa gelatooo tatata bala tu la bodaaa jiji para tú bappleees belloo!
+                Hahaha poulet tikka masala. Jeje poopayee hahaha baboiii ti aamoo! Hahaha me want bananaaa!
+                Me want bananaaa!
             </div>
             <div id="Research-Contributions" class="col-md-7">
                 <h3><strong>Research Contributions</strong></h3>
