--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,77 @@
                     </p>
                     </div>
                 </div>
+                <hr>
+
+
+                <div class="row">
+                    <div class="col-md-7">
+                        <div id="project_name">
+                            <h3>Project Name <small>(Supervisor)</small></h3>
+                            <ledgend>HCI</ledgend>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-9">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis in nunc vel cursus.
+                            Proin elementum pellentesque laoreet. Nam vitae orci ullamcorper, luctus justo ac, dapibus ipsum.
+                            Nam laoreet, sem in luctus dapibus, tellus enim luctus ex, nec aliquet enim nulla sit amet lectus.
+                            In hac habitasse platea dictumst. Maecenas lectus massa, semper nec lacinia ac, mollis vel leo.
+                            Nulla vestibulum volutpat sapien quis viverra. Etiam vitae elementum sapien, sed finibus odio.
+                            Sed sed commodo neque.
+                        </p>
+                    </div>
+                </div>
+                <hr>
+
+
+                <div class="row">
+                    <div class="col-md-7">
+                        <div id="project_name">
+                            <h3>Project Name <small>(Supervisor)</small></h3>
+                            <ledgend>HCI</ledgend>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-9">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis in nunc vel cursus.
+                            Proin elementum pellentesque laoreet. Nam vitae orci ullamcorper, luctus justo ac, dapibus ipsum.
+                            Nam laoreet, sem in luctus dapibus, tellus enim luctus ex, nec aliquet enim nulla sit amet lectus.
+                            In hac habitasse platea dictumst. Maecenas lectus massa, semper nec lacinia ac, mollis vel leo.
+                            Nulla vestibulum volutpat sapien quis viverra. Etiam vitae elementum sapien, sed finibus odio.
+                            Sed sed commodo neque.
+                        </p>
+                    </div>
+                </div>
+                <hr>
+
+
+                <div class="row">
+                    <div class="col-md-7">
+                        <div id="project_name">
+                            <h3>Project Name <small>(Supervisor)</small></h3>
+                            <ledgend>HCI</ledgend>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-9">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis in nunc vel cursus.
+                            Proin elementum pellentesque laoreet. Nam vitae orci ullamcorper, luctus justo ac, dapibus ipsum.
+                            Nam laoreet, sem in luctus dapibus, tellus enim luctus ex, nec aliquet enim nulla sit amet lectus.
+                            In hac habitasse platea dictumst. Maecenas lectus massa, semper nec lacinia ac, mollis vel leo.
+                            Nulla vestibulum volutpat sapien quis viverra. Etiam vitae elementum sapien, sed finibus odio.
+                            Sed sed commodo neque.
+                        </p>
+                    </div>
+                </div>
+                <hr>
             </div>
         </div>
     </div>
