--- a/projects.html
+++ b/projects.html
@@ -82,14 +82,16 @@
     <div class="row">
         <div id="research_side_nav" class="col-md-3">
             <h2>Areas of Research</h2>
-            <ol>
-                <li>Area 1</li>
-                <li>Area 2</li>
-                <li>Area 2</li>
-                <li>Area 2</li>
-                <li>Area 2</li>
-                <li>Area 2</li>
-            </ol>
+            <div id="projects_name">
+                <ol>
+                    <li>Area 1</li>
+                    <li>Area 2</li>
+                    <li>Area 2</li>
+                    <li>Area 2</li>
+                    <li>Area 2</li>
+                    <li>Area 2</li>
+                </ol>
+            </div>
         </div>
         <div id="research_projects" class="col-md-9">
             <h2>Research and Development Projects</h2>
