--- a/test.html
+++ b/test.html
@@ -1,10 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Research Group</title>
+
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/main.css">
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+
+    <!--[if lt IE 9]>
+    <script src="js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
+    <![endif]-->
 </head>
 <body>
+<div class="container-fluid">
+    <div class="row">
+        <div id="menu" class="col-md">
+            <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+                <!-- The Logo button & menu toggle button-->
+                <divc class="row">
+                    <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a href="#" class="navbar-brand">PCT Research group</a>
+                    </div>
+                </divc>
+                <!--End button & logo -->
+                <div class="row">
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-home"></span> Home</a>
+                                &nbsp;&nbsp;
+                            </li>
 
+                            <li>
+                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-globe"></span> Research</a>
+                                &nbsp;&nbsp;
+                            </li>
+
+                            <li>
+                                <a href="publications.html" target="_self"><span class="glyphicon glyphicon-list-alt"></span>
+                                    Publications</a>&nbsp;&nbsp;&nbsp;
+                            </li>
+
+                            <li>
+                                <a href="projects.html" target="_self"><span class="glyphicon glyphicon-book"></span> Projects</a>&nbsp;&nbsp;&nbsp;
+                            </li>
+
+                            <li>
+                                <a href="News.html" target="_self"><span class="glyphicon glyphicon-calendar"></span>Events</a>&nbsp;&nbsp;&nbsp;
+                            </li>
+
+                            <li>
+                                <a href="Events.html" target="_self"><span class="glyphicon glyphicon-calendar"></span>
+                                News</a>&nbsp;&nbsp;&nbsp;
+                            </li>
+
+                            <li>
+                                <a href="Profiles_View.html" target="_self"><span class="glyphicon glyphicon-user"></span> Knowledge
+                                    Power </a>&nbsp;&nbsp;&nbsp;
+                            </li>
+
+                            <li>
+                                <a href="index.html" target="_self"><span class="glyphicon glyphicon-alt"></span> About
+                                    Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    </div>
+            </nav>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
