Galler change Habuib

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand">PCT Research group</a>
+                    <a href="#" class="navbar-brand">PCT Research Group</a>
                 </div>
                 <!--End button & logo -->
                 <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar">
+                    <ul class="nav navbar-nav">
                         <li>
                             <a href="index.html" target="_self"><span class="glyphicon glyphicon-home"></span> Home</a>
                             &nbsp;&nbsp;
@@ -193,12 +193,12 @@
                     </p>
                 </div>
             </div>
-            <div id="News" class="col-md-4" style="float: right;">
+            <div id="News" class="col-md-4">
                 <h2>Updates</h2>
                 <ul class="nav nav-tabs">
-                    <li role="presentation" class="active" style="width: 320px;"><a href="News.html" target="_self"><strong>News</strong></a></li>
+                    <li role="presentation" class="active"><a href="News.html" target="_self"><strong>News</strong></a></li>
                 </ul>
-                <div id="text" style="height: 200px;    overflow: scroll;   overflow-x: hidden;">
+                <div id="text">
                     <p>
                         Minions ipsum chasy butt jeje jiji chasy. Belloo! potatoooo butt para tú me want bananaaa!
                         Chasy ti aamoo! Baboiii. Butt wiiiii para tú baboiii gelatooo. Chasy bananaaaa butt po kass wiiiii.
@@ -223,14 +223,24 @@
             <!--
              * First Div Right Events
              -->
-            <div id="Events" class="col-md-4" style="float: right;">
+            <div id="Events" class="col-md-4">
                 <ul class="nav nav-tabs">
-                    <li role="presentation" class="active" style=" width: 320px;"><a href="News.html" target="_self">Events</a></li>
+                    <li role="presentation" class="active"><a href="News.html" target="_self">Events</a></li>
                 </ul>
                 <br>
 
-                <div id="text" style="height: 200px;    overflow: scroll;   overflow-x: hidden;">
+                <div id="text">
                     <p>
+                        Minions ipsum chasy butt jeje jiji chasy. Belloo! potatoooo butt para tú me want bananaaa!
+                        Chasy ti aamoo! Baboiii. Butt wiiiii para tú baboiii gelatooo. Chasy bananaaaa butt po kass wiiiii.
+                        Tulaliloo la bodaaa gelatooo tatata bala tu la bodaaa jiji para tú bappleees belloo!
+                        Hahaha poulet tikka masala. Jeje poopayee hahaha baboiii ti aamoo! Hahaha me want bananaaa!
+                        Me want bananaaa!
+                        Minions ipsum chasy butt jeje jiji chasy. Belloo! potatoooo butt para tú me want bananaaa!
+                        Chasy ti aamoo! Baboiii. Butt wiiiii para tú baboiii gelatooo. Chasy bananaaaa butt po kass wiiiii.
+                        Tulaliloo la bodaaa gelatooo tatata bala tu la bodaaa jiji para tú bappleees belloo!
+                        Hahaha poulet tikka masala. Jeje poopayee hahaha baboiii ti aamoo! Hahaha me want bananaaa!
+                        Me want bananaaa!
                         Minions ipsum chasy butt jeje jiji chasy. Belloo! potatoooo butt para tú me want bananaaa!
                         Chasy ti aamoo! Baboiii. Butt wiiiii para tú baboiii gelatooo. Chasy bananaaaa butt po kass wiiiii.
                         Tulaliloo la bodaaa gelatooo tatata bala tu la bodaaa jiji para tú bappleees belloo!
@@ -289,18 +299,24 @@
             </div>
         </div>
 
+        <div style="clear: both;">
+        </div>
+
         <div class="container">
             <div class="col-md">
-                <div class="well well-lg">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <img src="//placehold.it/180x100" class="img-responsive">
-                        </div>
-                        <div class="col-sm-6">
-                            Some text here
+                <div id="img_gallery">
+                    <div class="well well-lg">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img src="//placehold.it/280x200" class="img-responsive">
+                            </div>
+                            <div class="col-sm-6">
+                                Some text here
+                            </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
 
@@ -308,7 +324,7 @@
             <footer class="footer-distributed">
                 <div class="footer-left">
                     <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
+                        <ul class="nav navbar-nav navbar">
                             <li>
                                 <a href="index.html" target="_self"><span class="glyphicon glyphicon-home"></span> Home</a>
                                 &nbsp;&nbsp;
