--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <div id="menu" class="col-md">
             <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
                 <!-- The Logo button & menu toggle button-->
+                <img src="img/pctlogo-crop.jpg">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
