Modal box fixed

--- a/News.html
+++ b/News.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div id="commingup_events" class="col-md-8">
-                <h3>Comming Up</h3>
+                <h3>Latest</h3>
                 <div id="inside_events">
                     <a href="" target="_blank">This is the test haeder of the events which will be shown.</a>
                     <p>Little detail abou the even what this event is about and where it's gona be to know about
